--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 blinker==1.9.0
 click==8.3.1
 colorama==0.4.6
+ecdsa==0.19.1
 Flask==3.1.2
 flask-marshmallow==1.3.0
 Flask-SQLAlchemy==3.1.1
@@ -10,6 +11,10 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 marshmallow==4.1.0
 marshmallow-sqlalchemy==1.4.2
+pyasn1==0.6.1
+python-jose==3.5.0
+rsa==4.9.1
+six==1.17.0
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.3
